css/styles.css
/****** General ***********/
*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
    --shadow-box: 0px 3px 15px 0px #0000001A;

}

.fa-solid {
    color: var(--main-color);
}

.fa-location-dot {
    color: black;
}

.sr-only{
    width: 1px;
    height: 1px;
    position: absolute;
    clip: rect(0, 0, 0, 0);
    overflow: hidden;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-family: 'Raleway', sans-serif;
    background-color: white;
    max-width: 1440px;
    margin: 0 auto;
}


main {
    display: flex;
    flex-direction: column;
    gap: 35px;
    margin-bottom: 35px;
    padding: 0 50px;
}


h1,
h2 {
    font-size: 22px;
    font-weight: 700;
}

h3 {
    font-weight: 700;
    font-size: 16px;
}

h4,
.filter-title,
.show-more {
    font-weight: 700;
    font-size: 18px;
}

a {
    color: inherit;
    text-decoration: none;
}


/************* Header *******************/
header {
    display: flex;
    justify-content: space-between;
}

header img {
    width: 61.09px;
    height: 19px;
}

.logo-container {
    padding: 30px 50px;
}


nav ul {
    padding: 15px 50px 0;
    list-style: none;
    display: flex;
    gap: 68px;
}

header a {
    font-size: 16px;
    font-weight: 400;
    padding-top: 13px;
    border-top: 2px solid transparent;
    transition: color .3s ease, border-top .3s ease;
}

header a:hover {
    color: var(--main-color);
    border-top: 2px solid var(--main-color);
}



.hero {
    display: flex;
    flex-direction: column;
    gap: 35px;
}

.title-box {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.subtitle {
    font-size: 16px;
    font-weight: 400;
}

/****** Formulaire de recherche ***********/
.search-form {
    display: flex;
    width: fit-content;
    position: relative;
    height: 49px;
}

.search-icon {
    background-color: #F2F2F2;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
    width: 50px;
    position: relative;
}

.search-icon i {
    position: absolute;
    top: 15px;
    left: 18px;
}

.search-icon__mobile {
    color: white;
    border: 1px solid var(--main-color);
    width: 17px;
    height: 17px;
}

#search {
    border: 1px solid var(--main-bg-color);
    outline: none;
    padding: 15px;
    flex: 1;
}

#search::placeholder {
    font-size: 18px;
    font-weight: 700;
    color: black;
    text-align: center;
}


.search-btn {
    height: 49px;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    background-color: var(--main-color);
    border: none;
    padding: 15px 16px;
    color: white;
    font-size: 18px;
    font-weight: 700;
    transition: transform .3s ease;
    cursor: pointer;
}

.search-form button:active {
    transform: scale(0.97);
}

.search-mobile-btn {
    background-color: var(--main-color);
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 15px;
    border: none;
    padding: 15px 16px;
    height: 49px;
    display: none;
}



/****** Filters section ***********/
.filter-container {
    display: flex;
    align-items: center;
    gap: 15px;
}

.filter-title {
    font-weight: 700;
    font-size: 18px;
}

.filter-list {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    list-style: none;
    gap: 15px;
}

.filter-btn {
    font-size: 16px;
    font-weight: bold;
    height: 50px;
    width: 100%;
    cursor: pointer;
    border-radius: 50px;
    border: 2px solid #D9D9D9;
    background-color: transparent;
    padding: 4px 19px;
    transition: background-color .3s ease, box-shadow .3s ease, border .3s ease, transform .3s ease;
}

.filter-btn:hover {
    background-color: var(--filter-bg-color);
}

.filter-btn:active {
    transform: translateY(2px);
}

.filter-btn span {
    margin-right: 10px;
}

.box-info {
    display: flex;
    align-items: center;
    gap: 10px;
    margin: 0;
}

.info-icons {
    height: 24px;
    width: 24px;
    border: 1px solid #D9D9D9;
    border-radius: 999px;
    display: flex;
    justify-content: center;
    align-items: center;
}

/****** Cards integration ***********/
.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    box-shadow: var(--shadow-box);
    transition: transform .3s ease, box-shadow .3s ease;
}

.card:hover {
    transform: translateY(-4px);
    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}


.euro {
    font-weight: 700;
}

.neutral-star {
    color: var(--main-bg-color)
}

/****** Hebergements And Populaires ***********/
.lodgings-and-popular {
    display: flex;
    justify-content: space-between;
}

.lodgings-and-popular section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
}

/****** Hebergements ***********/
#lodgings {
    display: flex;
    flex-direction: column;
    gap: 30px;
    width: 65%;
}

.lodgings-cards {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 30px;
}

.lodgings-cards .card {
    display: flex;
    height: 100%;
    flex-direction: column;
    overflow: hidden;
}

.lodgings-cards img {
    width: 100%;
    height: 124px;
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
}

.lodgings-cards .card-txt {
    display: flex;
    gap: 8px;
    flex-direction: column;
    padding: 8px 15px 10px;
}


/****** Populaires ***********/
.popular {
    width: 32%;
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.popular-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.popular-cards {
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.popular-cards .card {
    display: flex;
}

.popular-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
}

.popular-cards .card-content {
    width: 67%;
    padding: 10px 5px 5px 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.popular-cards .card-txt {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.popular-cards .card-rating {
    margin-bottom: 5px;
}

/****** Activity ***********/
#activity {
    padding: 30px;
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.activity-cards {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 30px;
}

.activity-cards .card {
    padding: 0;
    height: 100%;
    overflow: hidden;
}

.activity-cards img {
    height: 380px;
    width: 100%;
}

.activity-cards .card-txt {
    padding: 20px 19px;
}


/****** Footer ***********/
footer {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    background-color: var(--main-bg-color);
    gap: 30px;
    margin: 0 50px;
}

.footer-links {
    display: flex;
    flex-direction: column;
    padding: 20px;
    gap: 15px;
}



.footer-links a:hover {
    color: var(--main-color);
}


/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {
    .filter-container{
        flex-direction: column;
        align-items: start;
    }

    .lodgings-and-popular {
        flex-direction: column;
        gap: 50px;
    }

    #lodgings {
        width: 100%;
    }

    .popular {
        width: 100%;

    }

    .popular-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .popular-cards a {
        width: 30%;
    }

    .popular-cards .card-title {
        font-size: 14px;
    }

    .popular-cards .card-subtitle {
        font-size: 13px;
    }

    .activity-cards img {
        height: 200px;
    }

    .activity-cards .card-txt {
        height: 70px;
    }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {
    header {
        flex-direction: column;
        align-items: center;
    }

    .logo-container {
        padding: 30px;
    }

    nav ul {
        justify-content: center;
        gap: 0;
    }

    nav,
    nav ul {
        width: 100%;
        padding: 0;
    }

    nav li {
        flex: 1;
        text-align: center;
    }

    header a {
        border: none;
        border-bottom: 2px solid var(--main-bg-color);
        padding-bottom: 15px;
        width: 100%;
        display: block;
    }

    header a:hover {
        border-top: none;
        padding-bottom: 15px;
        border-bottom: 2px solid var(--main-color);
    }

    .search-btn {
        display: none;
    }

    .search-form {
        width: 100%;
    }

    .search-mobile-btn {
        
        display: flex;
        justify-content: center;
        align-items: center;
        position: absolute;
        right: 0;
        top: 0;
        z-index: 1;
    }

    #search {
        border-top-right-radius: 15px;
        border-bottom-right-radius: 15px;
    }


    main {
        padding: 0;
    }

    .hero {
        padding: 20px;
    }

    .filter-container {
        flex-wrap: wrap;
        gap: 20px;
    }

    .filter-list {
        grid-template-columns: repeat(2, 1fr);
        gap: 20px;
        width: 100%;
    }


    .lodgings-and-popular {
        flex-direction: column-reverse;
        gap: 15px;
    }

    .lodgings-and-popular .popular {
        border-radius: 0;
        padding: 30px 20px;
    }

    .lodgings-and-popular #lodgings {
        border-radius: 0;
        background-color: transparent;
        padding: 20px;
    }


    .popular-cards {
        display: flex;
        flex-direction: column;
    }

    .popular-cards a {
        width: 100%;
    }

    .lodgings-cards {
        grid-template-columns: 1fr;
        gap: 15px;
    }


    .activity-cards {
        grid-template-columns: 1fr;
        gap: 15px;
    }


    footer {
        grid-template-columns: 1fr;
        gap: 50px;
        margin: 0;
    }

}

